<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">恋人探しアンケート2015</string>
    <string name="action_settings">Settings</string>
    <string name="name">おなまえ</string>
    <string name="mysex">じぶんの性別</string>
    <string name="myage">じぶんの年齢</string>
    <string name="tgtsex">あいての性別</string>
    <string name="tgtage">あいての年齢(最小～最大)</string>
    <string name="from">～</string>
    <string name="summary">全くそう思わない(星1)~とてもそう思う(星5)の5段階で回答してください</string>
    <string name="dialog_ok">いいよ</string>
    <string name="dialog_no">Noooooo!</string>
    <string name="dialog_defmsg">これでok?</string>
    <string name="exp_success_tit">入力せいこう！</string>
    <string name="title_activity_propaty">ぷろぱてぃ</string>
    <string name="hello_propaty">Preferenceのあたいをいじるよ(関係者がさわってね！！！)</string>
    <string name="day_prop">なんにちめ？</string>
    <string name="id_prop">SaveされるIDは？</string>
    <string name="prop_enter">適用</string>
    <string name="questcount_prop">1こうもくのもんだいすうは？</string>

</resources>
